# pdf-analyzer

./: .gitignore  CONTRIBUTING.md  CONTRIBUTOR-LICENSE-AGREEMENT-TEMPLATE.md  LICENSE-OPTIONS.md  Makefile  NOTICE  README.md  analyzer2.py  list_models.py  mit_analyzer.py  pdf-analyzer.example.yaml  pdf_compress.py  pdf_tools.py  pyproject.toml  report.py  report_template.html
doc/: fact-extraction.md  name-matching.md  public-launch-plan.md  theory-of-operation.md
src/analyze_pdfs/: __init__.py  __main__.py  analyzer2.py  list_models.py  pdf_compress.py  pricing.py  report.py
src/pdf_analyzer/: __init__.py  __main__.py  cache_identity.py  config.py  constants.py  db.py  exceptions.py  gemini.py  main.py  models.py  name_clustering.py  name_clustering_gemini.py  name_clustering_local.py  name_clustering_models.py  pdf_tools.py  pdfa_tools.py  pricing.py  reporting.py  utils.py
src/pdf_analyzer/templates/: __init__.py  report.html.jinja
tests/: __init__.py  name_clustering_sample.yaml  name_clustering_support.py  run_name_clustering_comparison.py  test_cache_identity.py  test_cost_backfill.py  test_name_clustering_gemini.py  test_name_clustering_integration.py  test_name_clustering_local.py  test_pdf_analyzer_cli.py  test_pdf_analyzer_gemini_live.py  test_pdf_analyzer_pricing.py  test_pdfa_tools.py  test_reporting.py
