[project]
name = "mit-report-analyzer"
version = "0.1.0"
description = "Automated analysis of historical MIT reports via Gemini API"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    { name = "Simson L. Garfinkel" }
]
dependencies = [
    "google-genai>=1.73.0",
    "google-generativeai>=0.8.3",
    "pydantic>=2.13.0",
    "pypdf>=5.9.0",
]

[project.scripts]
analyze-mit = "mit_analyzer:main"
compress-pdf = "pdf_compress:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv]
managed = true
