[project]
name = "pdf-analyzer"
version = "0.1.0"
description = "Gemini-backed archive analysis for answering one question over a PDF collection"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    { name = "Simson L. Garfinkel" }
]
dependencies = [
    "google-genai>=1.73.0",
    "google-generativeai>=0.8.3",
    "jinja2>=3.1.6",
    "openpyxl>=3.1.5",
    "pydantic>=2.13.0",
    "pypdf>=6.10.2",
    "pyyaml>=6.0.2",
]

[project.scripts]
analyze = "pdf_analyzer.main:main"
pdf-analyzer = "pdf_analyzer.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pylint>=4.0.5",
    "pyright>=1.1.408",
    "pytest>=8.4.2",
]

[tool.hatch.build.targets.wheel]
packages = ["src/pdf_analyzer"]

[tool.hatch.build.targets.sdist]
include = [
    "/README.md",
    "/doc",
    "/pyproject.toml",
    "/src/pdf_analyzer",
    "/uv.lock",
]

[tool.uv]
managed = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--strict-markers"]
markers = [
    "gemini_live: opt-in Gemini-backed live integration tests",
]
python_files = ["*_test.py", "test_*.py"]
filterwarnings = [
  "ignore::DeprecationWarning:pkg_resources",
  "ignore:pkg_resources is deprecated:UserWarning",
  "ignore:'_UnionGenericAlias' is deprecated and slated for removal in Python 3.17:DeprecationWarning:google.genai.types",
]


[tool.pylint.messages_control]
# Disable specific messages by their symbolic name or message ID.
disable = [
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
    "line-too-long",
    "unspecified-encoding",
    "redefined-outer-name",
    "unused-argument",
    "invalid-name",
    "too-many-locals",
    "too-many-branches",
    "too-many-statements",
    "fixme",
    "trailing-whitespace",      # AI does this
    "trailing-newlines",
    "too-many-positional-arguments",
    "too-many-return-statements",
    "too-many-lines",
    "too-few-public-methods",
    "too-many-branches",
    "too-many-arguments",
    "too-many-public-methods",
    "too-many-instance-attributes"
]

[tool.pylint.design]
max-args = 10
max-public-methods = 20

[tool.pylint.typecheck]
# av is a C extension used by lambda-resize; allow it so E0401 is not raised.
extension-pkg-allow-list = ["av"]

[tool.pyright]
pythonVersion = "3.12"
venvPath = "./"
venv = ".venv"
include = ["."]
exclude = [
  "**/build",
  "**/.aws-sam",
  "**/.mypy_cache",
  "**/.pytest_cache",
  "**/__pycache__",
  "**/conftest.py"
]
typeCheckingMode = "basic"
reportMissingTypeStubs = "warning"

[[tool.pyright.executionEnvironments]]
root = "."
extraPaths = ["src", "lambda-resize/src"]
